--- a/_config.yml
+++ b/_config.yml
@@ -9,3 +9,89 @@ plugins:
   - jekyll-readme-index
   - jekyll-titles-from-headings
   - jekyll-relative-links
+
+title: Code Quality Blog
+tagline: Code Quality Coach and Black-Belt Judoka 
+description: Blog of a passionated judoka and software developer.
+
+lang: de-DE
+timezone: Europe/Berlin
+
+github:
+  username: ThomasLey
+twitter:
+  username: CleanCodeCoach
+social:
+  # Change to your full name.
+  # It will be displayed as the default author of the posts and the copyright owner in the Footer
+  name: Thomas Ley
+  email: thomas-codequalitycoach@outlook.de
+  links:
+    - https://twitter.com/CleanCodeCoach
+    - https://github.com/ThomasLey
+    # - https://www.facebook.com/username
+    # - https://www.linkedin.com/in/username
+
+paginate: 10
+
+kramdown:
+  syntax_highlighter: rouge
+  syntax_highlighter_opts:   # Rouge Options › https://github.com/jneen/rouge#full-options
+    css_class: highlight
+    # default_lang: console
+    span:
+      line_numbers: false
+    block:
+      line_numbers: true
+      start_line: 1
+
+collections:
+  tabs:
+    output: true
+    sort_by: order
+
+defaults:
+  -
+    scope:
+      path: '_posts'
+      type: posts
+    values:
+      layout: post
+      comments: false
+      toc: true
+      permalink: /posts/:title/
+  -
+    scope:
+      path: _drafts
+    values:
+      comments: false
+  -
+    scope:
+      path: ''
+      type: tabs
+    values:
+      layout: page
+      permalink: /:title/
+      dynamic_title: true
+
+sass:
+  style: compressed
+
+compress_html:
+  clippings: all
+  comments: all
+  endings: all
+  profile: false
+  blanklines: false
+
+exclude:
+  - docker-compose.yml
+
+jekyll-archives:
+  enabled: [categories, tags]
+  layouts:
+    category: category
+    tag: tag
+  permalinks:
+    tag: /tags/:name/
+    category: /categories/:name/
