--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
   name: Thomas Ley
-  email: thomas-codequalitycoach@outlook.de
+  email: blog@codequalitycoach.de
   links:
     - https://twitter.com/CleanCodeCoach
     - https://github.com/ThomasLey
