--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 theme: jekyll-theme-hacker
+
 plugins:
   - jekyll-coffeescript
   - jekyll-default-layout
@@ -9,7 +10,6 @@ plugins:
   - jekyll-readme-index
   - jekyll-titles-from-headings
   - jekyll-relative-links
-#  - jekyll-font-awesome-sass
 
 title: Code Quality Blog
 tagline: Code Quality Coach and Black-Belt Judoka 
@@ -38,6 +38,9 @@ kramdown:
       start_line: 1
 
 collections:
+  archives:
+    output: true
+    permalink: /archives/:path/
   tabs:
     output: true
     sort_by: order
@@ -80,10 +83,14 @@ exclude:
   - docker-compose.yml
 
 jekyll-archives:
-  enabled: [categories, tags]
+  #enabled: [categories, tags]
+  enabled: []
   layouts:
     category: category
     tag: tag
   permalinks:
     tag: /tags/:name/
     category: /categories/:name/
+    year: '/:year/'
+    month: '/:year/:month/'
+    day: '/:year/:month/:day/'
