--- a/.github/workflows/add_archives.yml
+++ b/.github/workflows/add_archives.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Generate Jekyll Archives
         uses: kannansuresh/jekyll-blog-archive-workflow@master
         with:
-          archive_url: "https://codequalitycoach.de/archives"
+          archive_url: "https://codequalitycoach.de/archives/archivedata"
           archive_folder_path: "_archives"
 
       - name: setup git config
