--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ plugins:
 
 title: Code Quality Blog
 tagline: Code Quality Coach and Black-Belt Judoka 
-description: Blog of a passionated judoka and software developer.
+description: Blog of a passionate judoka and software developer.
 avatar: https://avatars.githubusercontent.com/u/46560885?s=400&u=2bead4971162c936e23ffb77d27f876ebcfd903b&v=4
 lang: de-DE
 timezone: Europe/Berlin
